manifests/prod/betanin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betanin-service
  namespace: app-betanin
spec:
  selector:
    app: betanin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9393
